# ferrOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/drivers/io/: mod.rs  vgat_out.rs
src/osattrs/: mod.rs
src/proc/: mod.rs  procd.rs
src/runtime/: mod.rs  mod_defaults.rs
src/util/: iter.rs  mailbox_util.s  mod.rs
