[package]
name = "ferr_os"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.11"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
x86_64 = "0.13.2"

[dependencies.num]
version = "0.3.1"
default-features = false
